# Politopia-0.1

./: README.md
patterns/: CMakeLists.txt  Instruction.txt  README.md
patterns/project/: CMakeLists.txt  PlayCommand.cpp  PlayCommand.h  PrintWCommand.cpp  PrintWCommand.h  UnitCreator.h  archer.cpp  archer.h  archercreator.h  archerdec.cpp  archerdec.h  attackvisitor.cpp  attackvisitor.h  command.h  decorator.h  dragon.cpp  dragon.h  dragoncreator.h  dragondec.cpp  dragondec.h  fraction.cpp  fraction.h  game.cpp  game.h  giant.cpp  giant.h  giantcreator.h  giantdec.cpp  giantdec.h  iterator.cpp  iterator.h  logic.cpp  logic.h  main.cpp  mergevisitor.cpp  mergevisitor.h  rider.cpp  rider.h  ridercreator.h  riderdec.cpp  (+8 more)
